# copy-type

./: .gitignore  BUILD.md  Cargo.toml  README.md  README_en.md  build.rs  新建文本文档.html
.github/workflows/: rust-build-release.yml  rust-build.yml
assets/: copy-type.desktop
i18n/: en.toml  zh-CN.toml
src/: app_config.rs  hotkey_config.rs  i18n.rs  main.rs  permissions.rs
