[package]
name = "copy-type"
version = "0.1.0"
edition = "2021"
description = "A clipboard monitor that types copied text via keyboard simulation"
authors = ["Your Name"]

[dependencies]
# 剪贴板操作
arboard = "3.4"
# 全局快捷键
global-hotkey = "0.6"
# 模拟键盘输入
enigo = { version = "0.2", features = ["serde"] }
# GUI 框架
eframe = "0.30"
egui = "0.30"
raw-window-handle = "0.6"
# 系统托盘
tray-icon = "0.19"
# 图标处理
image = { version = "0.25", default-features = false, features = ["png"] }
# 日志
log = "0.4"
env_logger = "0.11"
# 序列化（用于保存配置）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# 目录
dirs = "6.0"
rand = "0.8"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "copy-type"
path = "src/main.rs"
